# rust-programming-examples

./: .gitignore  10_AGENTS_INTEGRATION_STATUS.md  CLAUDE.md  FMEA_GAP_ANALYSIS.md  README.md
book/: .gitignore  SUMMARY.md  book.toml
book/src/: 00-introduction.md  SUMMARY.md  appendix-a-projects.md  appendix-b-patterns.md  appendix-c-evolution.md  chapter-01-architecture.md
book/src/chapter-02-ownership/: 00-overview.md  01-ownership-as-constraint.md  02-move-semantics.md  03-borrowing-as-interface.md  04-lifetimes-in-systems.md  05-case-study-queues.md
book/src/chapter-03-traits/: 00-overview.md  01-traits-as-interfaces.md  02-composition-patterns.md  03-polymorphism-strategies.md  README.md  (+2 more)
clap-examples/: Cargo.toml  README.md
clap-examples/examples/01-hello-world/: Cargo.toml
clap-examples/examples/01-hello-world/src/: main.rs
clap-examples/examples/02-arguments-basic/: Cargo.toml
clap-examples/examples/02-arguments-basic/src/: main.rs
clap-examples/examples/03-subcommands/: Cargo.toml
clap-examples/examples/03-subcommands/src/: main.rs
clap-examples/examples/04-groups-and-conflicts/: Cargo.toml
clap-examples/examples/04-groups-and-conflicts/src/: main.rs
clap-examples/examples/05-custom-parsers/: Cargo.toml
clap-examples/examples/05-custom-parsers/src/: main.rs
clap-examples/examples/06-builder-pattern/: Cargo.toml
clap-examples/examples/06-builder-pattern/src/: main.rs
clap-examples/examples/07-derive-macros/: Cargo.toml
clap-examples/examples/07-derive-macros/src/: main.rs
clap-examples/examples/08-environment-config/: Cargo.toml
clap-examples/examples/08-environment-config/src/: main.rs
clap-examples/examples/09-error-handling/: Cargo.toml
clap-examples/examples/09-error-handling/src/: main.rs
clap-examples/examples/10-plugins-architecture/: Cargo.toml
clap-examples/examples/10-plugins-architecture/src/: main.rs
clap-examples/examples/11-testing/: Cargo.toml
clap-examples/examples/11-testing/src/: main.rs
clap-examples/examples/11-testing/tests/: integration.rs
clap-examples/examples/12-real-world-project/: Cargo.toml
clap-examples/examples/12-real-world-project/src/: cli.rs  commands.rs  config.rs  error.rs  main.rs  output.rs
docs/: index.md
docs/clap-architecture-book/: BUILD_INSTRUCTIONS.md  CHANGELOG.md  CHAPTER_MANIFEST.md  DEPLOYMENT.md  MAINTENANCE.md  QA_REPORT.md  README.md  book.toml
docs/explanation/: 01-ownership-borrowing.md  02-traits-generics.md  03-error-handling.md  04-async-concurrency.md  05-unsafe-ffi.md  06-case-study-fern-sim.md  07-case-study-gap-buffer.md  08-patterns-idioms.md  09-python-to-rust-mindset.md  10-when-to-use-rust.md  index.md
docs/how-to/: 01-make-http-requests.md  02-build-simple-http-client.md  03-implement-url-router.md  04-build-web-server-actix.md  05-block-on-futures.md  06-spawn-blocking-tasks.md  07-build-async-echo-server.md  08-concurrent-http-requests.md  09-create-ffi-bindings.md  10-wrap-ffi-safely.md  11-write-declarative-macros.md  12-organize-rust-modules.md  index.md
docs/reference/: 01-fundamentals-api.md  02-data-structures-api.md  03-types-api.md  04-networking-api.md  05-async-api.md  06-ffi-macros-api.md  index.md
docs/tutorials/: 01-getting-started.md  02-basic-io-gcd.md  03-file-operations-copy.md  04-text-processing-grep.md  05-queue-basics.md  06-generics-queue.md  07-binary-tree.md  08-gap-buffer.md  09-custom-types-ascii.md  10-operator-overloading-complex.md  11-generic-bounds-interval.md  12-unsafe-ref-with-flag.md  index.md
patterns-book/: .gitignore  ALEXANDER_PATTERN_LANGUAGE_PLAN.md  BUILD.md  INDEX.md  MATURITY_MATRIX.md  PATTERN_GRAPH_VISUAL.md  PATTERN_SELECTION_GUIDE.md  PLANNING_SUMMARY.md  README.md  SAMPLE_PATTERNS_ALEXANDER_FORMAT.md  TABLE_OF_CONTENTS.md  book.toml  mathjax-init.js
patterns-book/src/: SUMMARY.md  appendix-extensions.md  appendix-plugin-authoring.md  custom.css  custom.js  how-to-use.md  introduction.md  pattern-catalog.md  pattern-form.md  pattern-map.md
refactoring-rust-frameworks/: book.toml
refactoring-rust-frameworks/book/: 01-performance-refactoring-patterns.html  02-api-evolution-design-strategies.html  03-testing-strategy-during-refactoring.html  04-async-refactoring-concurrency-patterns.html  05-type-driven-refactoring-safety.html  06-modular-architecture-patterns.html  07-documentation-dx-during-refactoring.html  08-backward-compatibility-migration-strategies.html  09-security-hardening-through-refactoring.html  10-ecosystem-integration-interoperability.html  11-ffi-deep-dive-c-interoperability.html  12-memory-model-concurrent-access.html  13-unsafe-rust-memory-layout.html  14-drop-semantics-resource-management.html  15-lifetime-variance-subtyping.html  16-transmute-type-punning.html  17-macro-internals-metaprogramming.html  18-type-system-internals-trait-coherence.html  19-compiler-intrinsics-llvm.html  20-pin-unpin-self-referential.html  21-raw-pointers-pointer-arithmetic.html  404.html  conclusion.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-80709b90.js  searchindex-f42775c0.js  toc-a688046c.js  toc-c9f38b0a.js  toc.html
refactoring-rust-frameworks/src/: 01-performance-refactoring-patterns.md  02-api-evolution-design-strategies.md  03-testing-strategy-during-refactoring.md  04-async-refactoring-concurrency-patterns.md  05-type-driven-refactoring-safety.md  06-modular-architecture-patterns.md  07-documentation-dx-during-refactoring.md  08-backward-compatibility-migration-strategies.md  09-security-hardening-through-refactoring.md  10-ecosystem-integration-interoperability.md  11-ffi-deep-dive-c-interoperability.md  12-memory-model-concurrent-access.md  13-unsafe-rust-memory-layout.md  14-drop-semantics-resource-management.md  15-lifetime-variance-subtyping.md  16-transmute-type-punning.md  17-macro-internals-metaprogramming.md  18-type-system-internals-trait-coherence.md  19-compiler-intrinsics-llvm.md  20-pin-unpin-self-referential.md  21-raw-pointers-pointer-arithmetic.md  SUMMARY.md  conclusion.md  introduction.md
(+245 files in other folders)
