# Example 11: Testing CLIs
# =========================
# Demonstrates unit testing, integration testing, snapshot testing,
# and best practices for testing command-line applications.

[package]
name = "testing"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
